# SampleOnSolana

./: Anchor.toml  package.json
programs/SampleOnSolana/: Cargo.toml
programs/SampleOnSolana/src/: lib.rs
tests/: SampleOnSolana.ts
